--- a/styles.css
+++ b/styles.css
@@ -1,126 +1,131 @@
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500&display=swap');
 
 * {
-    font-family: 'JetBrains Mono', monospace;
-    color: white;
-    margin: 0;
-    padding: 0;
+    font-family: 'VCR OSD Mono', sans-serif;
+    color: white
 }
 
 body {
+    margin: 0;
+    padding: 0;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #000;
 }
 
 .wallpaper {
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url('https://i.ytimg.com/vi/pl-QBuRoANU/maxresdefault_live.jpg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.9)), url(https://images-ext-1.discordapp.net/external/SwU3IetizsnvCmb_FYcdqlsw27u2d8Ie-ZBhCyxtE7k/https/dox.report/wallpaper.gif?width=717&height=430);
     background-size: cover;
     background-position: center;
-    width: 100%;
     height: 100vh;
+}
+
+pre {
+    color: #fff;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    border: none;
+    font-size: 10px;
+    
+}
+
+.center-screen {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100vh;
 }
 
-.container {
-    text-align: center;
-}
-
-.profiles {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 30px;
-    margin-bottom: 30px;
-}
-
-.profile-card {
-    background: rgba(255, 255, 255, 0.1);
-    border-radius: 15px;
+.box-brrr {
+    width: calc(47% - 10px);
+    border-radius: 2px;
+    background-color: transparent;
     padding: 20px;
-    width: 250px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-    backdrop-filter: blur(10px);
+    display: block;
+    box-sizing: border-box;
+    margin: 0 5px; 
 }
+
+.box-contain {
+    display: flex;
+    margin-top: 1em;
+    width: 500px;
+    text-align: center;
+    justify-content: center;
+}
+
 
 .pfp {
-    width: 120px;
-    height: 120px;
+    width: 110px;
+    height: auto;
     border-radius: 50%;
-    margin-bottom: 10px;
-    border: 3px solid #fff;
+    margin-left: 20px;
 }
 
-h2 {
-    font-size: 1.5em;
-    margin: 10px 0;
+.text {
+    margin-top: 30px;
+	text-decoration: none;
+	color: #dddddd;
+    text-align: center;
+	font-size: 12px;
 }
 
-.role {
-    color: #ddd;
-    font-size: 0.9em;
-    margin-bottom: 15px;
-}
+.fade-in-image {
+    animation: fadeIn 3s;
+    -webkit-animation: fadeIn 3s;
+    -moz-animation: fadeIn 3s;
+    -o-animation: fadeIn 3s;
+    -ms-animation: fadeIn 3s;
+  }
+  @keyframes fadeIn {
+    0% { opacity:0; }
+    100% { opacity:1; }
+  }
+  
+  @-moz-keyframes fadeIn {
+    0% { opacity:0; }
+    100% { opacity:1; }
+  }
+  
+  @-webkit-keyframes fadeIn {
+    0% { opacity:0; }
+    100% { opacity:1;}
+  }
+  
+  @-o-keyframes fadeIn {
+    0% { opacity:0; }
+    100% { opacity:1; }
+  }
+  
+  @-ms-keyframes fadeIn {
+    0% { opacity:0; }
+    100% { opacity:1; }
+  }
 
-.social-icons {
-    margin-top: 10px;
-}
+  
+  @media (max-width: 600px) {
+    html, body {
+        overflow-x: hidden;
+    }
+    .intial-container {
+        margin-top: 1200px;
 
-.social-icon {
-    width: 30px;
-    margin: 0 5px;
-    transition: transform 0.3s;
-}
-
-.social-icon:hover {
-    transform: scale(1.1);
-}
-
-.description-box {
-    background: rgba(255, 255, 255, 0.1);
-    border-radius: 15px;
-    padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-    backdrop-filter: blur(10px);
-    max-width: 600px;
-    margin: auto;
-}
-
-.description-box h3 {
-    margin-bottom: 10px;
-    font-size: 1.5em;
-}
-
-.description-box p {
-    margin-bottom: 10px;
-}
-
-.description-box a {
-    color: #f0f0f0;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.description-box a:hover {
-    text-decoration: underline;
-}
-
-@media (max-width: 600px) {
-    .profiles {
+    }
+    .box-contain {
         flex-direction: column;
         align-items: center;
     }
-
-    .profile-card {
-        width: 100%;
+    .box-brrr {
         max-width: 400px;
     }
-
-    .description-box {
+    .box-brrr2 {
+        max-width: 400px;
+    }
+    pre {
         font-size: 14px;
+        overflow-y: auto;
+    }
+    .text {
+        font-size: 8px;
+        margin-bottom: 150px;
     }
 }
