--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -7,87 +6,77 @@
 
 body {
     background-color: #000;
-    background-image: url('https://images6.alphacoders.com/874/874542.jpg'); 
-    background-size: cover;
-    background-position: center;
-    color: #fff;
-    font-family: 'Creepster', cursive;
+    font-family: 'Minecraftia', sans-serif;
     height: 100vh;
+    margin: 0;
+    padding: 0;
     display: flex;
     justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    overflow: hidden;
+    align-items: flex-start;
 }
 
-
-.logo-container {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    overflow: hidden;
-    background-color: #00000000;
+.content {
     display: flex;
-    justify-content: center;
     align-items: center;
-    border: 3px solid #000000; 
+    margin-top: 40px;
 }
 
-.logo {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.image-container {
+    margin-right: 40px;
 }
 
-
-.container {
-    text-align: center;
-    z-index: 1;
+.main-image {
+    width: 250px;
+    height: auto;
 }
 
-h1 {
-    font-size: 6rem;
-    margin-bottom: 20px;
-    color: #ffa500; 
-    text-shadow: 5px 5px 0 #ff0000;
+.text-container {
+    text-align: left;
 }
 
-p {
+.text-container h1 {
     font-size: 2rem;
-    color: #000000;
+    color: #fff;
+    margin-bottom: 15px;
+    font-family: 'Minecraftia', sans-serif;
 }
 
-
-.bats {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    z-index: 1;
+.coming-soon-btn {
+    font-size: 1.25rem;
+    color: #ffffff;
+    text-decoration: none;
+    display: inline-block;
+    margin-top: 15px;
 }
 
-.bat {
-    position: absolute;
-    width: 50px;
-    height: 30px;
-    background: url('https://1000logos.net/wp-content/uploads/2021/10/Batman-Logo.png') no-repeat center/contain;
-    top: 100px;
-    animation: fly 8s linear infinite;
+.coming-soon-btn:hover {
+    text-decoration: underline;
 }
 
-@keyframes fly {
-    0% {
-        transform: translate(-100px, 0) scale(0.5);
-    }
-    50% {
-        transform: translate(100vw, 50vh) scale(1);
-    }
-    100% {
-        transform: translate(-100px, -100vh) scale(0.5);
-    }
+.owners-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.owners-list h1 {
+    color: #fff;
+    font-size: 2rem;
+    margin-bottom: 15px;
+}
+
+.glowing-text {
+    color: gold;
+    text-shadow: 0 0 5px gold, 0 0 10px gold, 0 0 15px gold;
+    font-size: 1.6rem;
+    margin: 10px 0;
+}
+
+.glowing-text a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.glowing-text a:hover {
+    text-decoration: underline;
 }
